--- a/packages/nodes-base/package.json
+++ b/packages/nodes-base/package.json
@@ -827,8 +827,8 @@
     "@types/cheerio": "^0.22.15",
     "@types/eventsource": "^1.1.2",
     "@types/express": "catalog:",
-    "@types/html-to-text": "^9.0.1",
     "@types/gm": "^1.25.0",
+    "@types/html-to-text": "^9.0.1",
     "@types/js-nacl": "^1.3.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "catalog:",
@@ -848,7 +848,9 @@
     "n8n-core": "workspace:*"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "3.717.0",
     "@aws-sdk/client-sso-oidc": "3.666.0",
+    "@aws-sdk/s3-request-presigner": "3.717.0",
     "@kafkajs/confluent-schema-registry": "1.0.6",
     "@n8n/config": "workspace:*",
     "@n8n/imap": "workspace:*",
@@ -866,8 +868,8 @@
     "eventsource": "2.0.2",
     "fast-glob": "catalog:",
     "fflate": "0.7.4",
-    "get-system-fonts": "2.0.2",
     "generate-schema": "2.6.0",
+    "get-system-fonts": "2.0.2",
     "gm": "1.25.0",
     "html-to-text": "9.0.5",
     "iconv-lite": "catalog:",
@@ -894,8 +896,8 @@
     "nodemailer": "6.9.9",
     "otpauth": "9.1.1",
     "pdfjs-dist": "2.16.105",
-    "pg-promise": "11.9.1",
     "pg": "8.12.0",
+    "pg-promise": "11.9.1",
     "promise-ftp": "1.3.5",
     "pyodide": "0.23.4",
     "redis": "4.6.14",
